# CurvePlot

./: .gitmodules  BSplineCurve.cpp  BSplineCurve.hpp  BernsteinCurve.cpp  BernsteinCurve.hpp  Bezier3PAlgoCurve.cpp  Bezier3PAlgoCurve.hpp  Bezier4PAlgoCurve.cpp  Bezier4PAlgoCurve.hpp  BezierCurve.cpp  BezierCurve.hpp  CMakeLists.txt  ChaikinCurve.cpp  ChaikinCurve.hpp  CurveItem.cpp  CurveItem.hpp  CurvePlot.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PointItem.cpp  PointItem.hpp  TestBox.cpp  TestBox.hpp
